fix(tag label): tag text misaligned in iOS Safari (#160)

--- a/packages/ext-tags/less/common/TagLabel.less
+++ b/packages/ext-tags/less/common/TagLabel.less
@@ -7,6 +7,7 @@
   background: var(--tag-bg);
   color: var(--tag-color);
   text-transform: none;
+  vertical-align: bottom;
 
   &.untagged {
     --tag-bg: transparent;
